<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApiActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fitsSystemWindows="true">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:ignore="MissingConstraints">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/idlab"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/id"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/idin"
        app:layout_constraintBottom_toTopOf="@id/keykab"
        app:layout_constraintBottom_toBottomOf="@id/idin"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:id="@+id/keykab"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:text="@string/key"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/keyin"
        app:layout_constraintTop_toBottomOf="@id/idlab"
        app:layout_constraintBottom_toBottomOf="@id/keyin"
        android:layout_marginLeft="5dp"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/idin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/idlab"
        app:layout_constraintBottom_toTopOf="@id/keyin"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/keyin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/keykab"
        app:layout_constraintTop_toBottomOf="@id/idin"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/keyin"
        app:layout_constraintBottom_toTopOf="@id/reset"
        android:text="@string/saveapi"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/save"
        android:text="@string/resetapi"/>
    <TextView
        android:id="@+id/pask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/reset"
        android:layout_margin="10dp"
        android:textColor="#FF0000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:text="如何开启语音翻译功能：\n 登录百度翻译api网站->管理控制台->总览->开通其他服务->语音翻译sdk"
        app:layout_constraintTop_toBottomOf="@id/pask"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>