<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/bar_content_layout">


    <androidx.cardview.widget.CardView
        android:id="@+id/inputcard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="16:8"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/mlh">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_padding_top"
                android:layout_weight="6"
                android:hint="@string/ywint"
                android:imeOptions="actionSearch"
                android:textSize="25sp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:src="@drawable/ic_action_paste"
                    android:id="@+id/buttonpaste"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/btnpst"
                    android:background="@color/sl"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:src="@drawable/ic_action_clear"
                    android:id="@+id/buttonclear"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:text="@string/btnclr"
                    android:background="@color/sl"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/transbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/outputcard"
        app:layout_constraintDimensionRatio="20:3"
        app:layout_constraintTop_toBottomOf="@id/inputcard"
        tools:ignore="MissingConstraints"
        android:background="@color/qkh">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_from"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:entries="@array/countryfrom"
            android:padding="4dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonchange"
            android:src="@drawable/ic_action_change"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@color/sl"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_to"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:entries="@array/countryto"
            android:padding="4dp"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/outputcard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transbar"
        app:cardBackgroundColor="@color/mlh">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/output"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_padding_top"
                android:layout_weight="6"
                android:hint="@string/fyint"
                android:textSize="25sp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/buttontrans"
                    android:src="@drawable/ic_action_trans"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/btntran"
                    android:background="@color/sl"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="1dp"/>
                <androidx.appcompat.widget.AppCompatImageButton
                    android:src="@drawable/ic_action_copy"
                    android:id="@+id/buttoncopy"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/btncpy"
                    android:background="@color/sl"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>